argo-cd/extras/k3s-ceplea/garage/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-s3-api
spec:
  hostnames:
    - s3.internal.balutoiu.com
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: garage
          port: 3900
